# oct-segmentation-and-classification

./: .gitignore  pyproject.toml
dataset/scripts/: classificationData.py  segmentationData.py
models/classification_model/: VGG11.py
models/saved_models_metrics/: train_metrics.json  val_metrics.json
notebooks/: Untitled.ipynb
