[project]
name = "deep-learning-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchmetrics>=1.6.1",
    "torchvision>=0.21.0",
]
